# whir-p3-metal

./: .gitignore  Cargo.toml  README.md  bench.sh  probe_n22_r5.tsv  probe_n22_r5r6_extended.tsv  sweep_results.txt
benches/: dft_gpu.rs
docs/: client-side-gpu-proving.md  ethresearch-client-side-gpu-proving.md  gpu-optimizations.md
ios/: README.md  build-rust.sh  project.yml  whir_bench.h
ios/WhirBench/: ContentView.swift  WhirBench-Bridging-Header.h  WhirBenchApp.swift
p3-merkle-tree-patched/: Cargo.toml
p3-merkle-tree-patched/src/: merkle_tree.rs
shaders/: babybear_ntt.metal
src/: ffi.rs  gpu_dft.rs  lib.rs
src/whir/prover/: mod.rs
